<resources>
    <string name="app_name">Magnanime</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_anime">Anime</string>
    <string name="menu_manga">Manga</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btnDescription">Read description</string>
    <string name="seasonText">Anime Season</string>
    <string name="episodesText">Number of episodes</string>
    <string name="durationText">Duration of the episodes</string>
    <string name="originText">Country of origin</string>
    <string name="number_18">18</string>
    <string name="adultTooltip">Is for adults?</string>
    <string name="scoreAvgTooltip">Score average</string>
    <string name="externalLinks">External Links</string>
    <string name="btnLinks">External Links</string>
    <string name="studioTitle">Studios</string>
    <string name="charsLabel">Characters</string>
    <string name="reviewsLabel">Reviews</string>
    <string name="popularThis">Popular This Season</string>
    <string name="popularNext">Upcoming Next Season</string>
    <string name="allTime">All Time Popular</string>
    <string name="latest">Last Updated</string>
    <string name="author">\@ArielFJ</string>
    <string name="loadMore">Touch here to load more</string>

    <string name="login">Log In</string>
    <string name="logout">Log Out</string>
    <string name="usernameLabel">Username</string>
    <string name="usernameHint">Ex.: myUsername</string>
    <string name="passwordLabel">Password</string>
    <string name="registerLabel">If the user does not exist, we will automatically create with the introduced credentials.</string>
    <string name="submit">Submit</string>
    <string name="action_adult">Display adult content</string>
    <string name="action_rate">Rate app</string>
    <string name="no_user">No User</string>
    <string name="favorites">Favorites</string>
    <string name="bottom_sheet_title">Confirm exit?</string>
    <string name="exit">Close app</string>
    <string name="search">Search</string>
    <string name="onePiece">One Piece</string>

</resources>