<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_anime"
            android:title="@string/menu_anime" />

<!--        <item-->
<!--            android:id="@+id/nav_gallery"-->
<!--            android:icon="@drawable/ic_manga"-->
<!--            android:title="@string/menu_manga" />-->

        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search"
            android:title="@string/search" />

        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_fav"
            android:title="@string/favorites" />

<!--        <item-->
<!--            android:id="@+id/log"-->
<!--            android:icon="@drawable/ic_login"-->
<!--            android:title="@string/login" />-->

    </group>
</menu>