<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialogContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutDialog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/alert_background"
        android:backgroundTint="@color/dialog"
        android:layout_marginTop="@dimen/common_padding_xxLarge"
        android:layout_marginBottom="@dimen/common_padding_xxLarge"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/title_secondary_background"
            android:backgroundTint="@color/azul1"
            android:padding="10dp"
            android:text="@string/login"
            android:textAppearance="?attr/textAppearanceHeadline6"/>

        <ImageView
            android:id="@+id/iconImage"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_lock"
            android:layout_marginEnd="@dimen/common_padding_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/title"
            app:layout_constraintBottom_toBottomOf="@id/title"/>

        <TextView
            android:id="@+id/usernameLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/usernameLabel"
            android:layout_marginTop="@dimen/common_padding_default"
            android:textColor="@color/foreground"
            android:textAppearance="?attr/textAppearanceBody1"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/title"/>

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_small"
            android:layout_marginHorizontal="@dimen/common_padding_large"
            android:hint="@string/usernameHint"
            android:backgroundTint="@color/foreground"
            android:textColor="@color/foreground"
            app:layout_constraintTop_toBottomOf="@id/usernameLabel" />

        <TextView
            android:id="@+id/passwordLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/passwordLabel"
            android:textColor="@color/foreground"
            android:layout_marginTop="@dimen/common_padding_large"
            android:textAppearance="?attr/textAppearanceBody1"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/username"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_small"
            android:layout_marginHorizontal="@dimen/common_padding_large"
            android:inputType="textPassword"
            android:backgroundTint="@color/foreground"
            android:textColor="@color/foreground"
            app:layout_constraintTop_toBottomOf="@id/passwordLabel" />

        <ImageButton
            android:id="@+id/btnShowPw"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_show"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_marginEnd="@dimen/common_padding_small"
            app:layout_constraintTop_toTopOf="@id/password"
            app:layout_constraintBottom_toBottomOf="@id/password"
            app:layout_constraintEnd_toEndOf="@id/password" />

        <TextView
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registerLabel"
            android:layout_marginTop="@dimen/common_padding_xxLarge"
            android:layout_marginHorizontal="@dimen/common_padding_xxLarge"
            android:textColor="@color/foreground"
            android:textSize="12sp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/password"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_marginTop="@dimen/common_padding_default"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_large"
            app:layout_constraintTop_toBottomOf="@id/btnSubmit" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/close"
        android:layout_width="50dp"
        android:layout_height="50dp"
        style="@style/Widget.MaterialComponents.Button"
        app:icon="@drawable/ic_close"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        android:insetBottom="0dp"
        android:insetLeft="0dp"
        android:insetRight="0dp"
        android:insetTop="0dp"
        app:cornerRadius="30dp"
        android:backgroundTint="@color/error"
        app:layout_constraintTop_toBottomOf="@id/layoutDialog"
        app:layout_constraintBottom_toBottomOf="@id/layoutDialog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>